🧹 Clean up repository: Add .gitignore and remove unnecessary files
- Add comprehensive .gitignore for Python, Node.js, TypeScript, VS Code
- Remove Python cache files (__pycache__)
- Remove Node.js dependencies (node_modules/)
- Remove built extension files (*.vsix)
- Remove package-lock.json
- Update extension with fixed view registration
- Add professional README with troubleshooting guide
- Add automated test script and fix summary

--- a/extension/package.json
+++ b/extension/package.json
@@ -24,16 +24,28 @@
         "Other"
     ],
     "activationEvents": [
-        "onView:gemmapilot.chat"
+        "onView:gemmapilot.chat",
+        "onStartupFinished"
     ],
     "main": "./out/extension.js",
     "contributes": {
+        "viewsContainers": {
+            "activitybar": [
+                {
+                    "id": "gemmapilot",
+                    "title": "GemmaPilot",
+                    "icon": "$(comment-discussion)"
+                }
+            ]
+        },
         "views": {
-            "explorer": [
+            "gemmapilot": [
                 {
                     "id": "gemmapilot.chat",
-                    "name": "GemmaPilot Chat",
-                    "when": "true"
+                    "name": "Chat",
+                    "type": "webview",
+                    "when": "true",
+                    "icon": "$(comment-discussion)"
                 }
             ]
         },
